<resources>
    <string name="app_name">feature-Tipe-rumah</string>
    <string name="title_tipe_rumah">Tipe Rumah</string>
    <string name="title_tambah_tipe_rumah">TambahTipe Rumah</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_tipe">Nama Tipe</string>
    <string name="ukuran">Ukuran</string>
    <string name="edit_tipe_rumah">Edit tipe rumah</string>
    <string name="tambah_tipe_rumah">Tambah Tipe Rumah</string>
    <string name="simpan">SIMPAN</string>
    <string name="jumlah_unit">Jumlah Unit</string>
    <string name="air">Air</string>
    <string name="sanitasi">Sanitasi</string>
    <string name="rangka_atap">Rangka Atap</string>
    <string name="dinding_kamar_mandi">Dinding Kamar Mandi</string>
    <string name="plafon">Plafon</string>
    <string name="dinding">Dinding</string>
    <string name="harga_rp">Harga (Rp)</string>
    <string name="listrik">Listrik</string>
    <string name="atap">Atap</string>
    <string name="kusen">Kusen</string>
    <string name="pintu_depan">Pintu Depan</string>
    <string name="lantai">Lantai</string>
    <string name="pondasi">Pondasi</string>
    <string name="add_tipe_rumah">Tambah Tipe Rumah</string>
    <string name="tambah_foto_rumah">Tambah foto rumah</string>
    <string name="delete_tipe_rumah_title">Apakah kamu yakin ingin menghapus tipe rumah ini?</string>
    <string name="edit">Edit</string>
    <string name="delete">Hapus</string>
</resources>