<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackgroundPrimary"
    tools:context=".AddTipeRumahFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/container_btn_submit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/medium"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BaseTheme.EditText.TextInputLayoutFilledBoxPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_nama_tipe"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_tipe"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BaseTheme.EditText.TextInputLayoutFilledBoxPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_pondasi"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pondasi"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BaseTheme.EditText.TextInputLayoutFilledBoxPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_lantai"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lantai"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BaseTheme.EditText.TextInputLayoutFilledBoxPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_pintu_depan"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pintu_depan"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BaseTheme.EditText.TextInputLayoutFilledBoxPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_kusen"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kusen"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BaseTheme.EditText.TextInputLayoutFilledBoxPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_atap"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/atap"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BaseTheme.EditText.TextInputLayoutFilledBoxPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_listrik"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/listrik"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BaseTheme.EditText.TextInputLayoutFilledBoxPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_harga"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/harga_rp"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BaseTheme.EditText.TextInputLayoutFilledBoxPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_ukuran"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ukuran"
                    android:inputType="number"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BaseTheme.EditText.TextInputLayoutFilledBoxPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_dinding"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dinding"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BaseTheme.EditText.TextInputLayoutFilledBoxPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_plafon"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/plafon"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BaseTheme.EditText.TextInputLayoutFilledBoxPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_dinding_kamar_mandi"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kamar_mandi"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BaseTheme.EditText.TextInputLayoutFilledBoxPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_rangka_atap"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rangka_atap"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BaseTheme.EditText.TextInputLayoutFilledBoxPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_sanitasi"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sanitasi"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BaseTheme.EditText.TextInputLayoutFilledBoxPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_air"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/air"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BaseTheme.EditText.TextInputLayoutFilledBoxPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_jumlah_unit"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/jumlah_unit"
                    android:inputType="number"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/large" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/container_btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundSecondary"
        app:cardElevation="@dimen/medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.ridhoafnidev.project.core_resource.components.BaseButton
            android:id="@+id/btn_submit"
            style="@style/BaseTheme.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium"
            android:text="@string/simpan"
            android:textAllCaps="true" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>