<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardUseCompatPadding="true"
    android:layout_marginBottom="@dimen/small">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small">

        <TextView
            android:id="@+id/nama_tipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/nama_tipe" />

        <TextView
            android:id="@+id/tv_nama_tipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toStartOf="@+id/btn_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nama_tipe"
            tools:text="Wajik" />

        <TextView
            android:id="@+id/ukuran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:text="@string/ukuran"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nama_tipe" />

        <TextView
            android:id="@+id/tv_ukuran"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="@+id/tv_nama_tipe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ukuran"
            tools:text="500" />

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_white"
            android:backgroundTint="@color/colorActionEdit"
            android:contentDescription="@string/edit_tipe_rumah"
            app:layout_constraintEnd_toStartOf="@+id/btn_delete"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_white"
            android:backgroundTint="@color/colorActionDelete"
            android:contentDescription="@string/edit_tipe_rumah"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>